src/test/deca/context/invalid/exp_print_voidMethod.deca
// Test of the rule 3.31: Can't print an object whose type is not
// a float, an int, or a string


class A {
    void voidMethod(){
        int x = 5;
    }

    void testMethod(){
        print(voidMethod());
    }
}


// Resultat:
//# TODOTEST  HELP FELIX-SAN, SHOULD HAVE THE SAME ERROR NO ?